--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,16 +1,24 @@
 * {
     font-family: 'Roboto Mono', sans-serif;
 }
+
+img {
+    min-height: 400px;
+    min-width: 250px;
+    margin-right: 40px;
+}
+
 .header {
     display: flex;
     font-size: 50px;
     font-weight: bolder;
-    text-decoration: underline;
     justify-content: center;
     padding-bottom: 45px;
     padding-top: 15px;
-
 }
+
+
+/* Think about these later */
 .flex-container {
     display: flex;
     flex-direction: column;
@@ -18,16 +26,13 @@
     margin-left: 15px;
     flex-wrap: wrap;   
 }
+
 .textbox {
     height: 100px;
     width: 200px;
     margin-bottom: 10px;
 }
-img {
-    min-height: 400px;
-    min-width: 250px;
-    margin-right: 40px;
-}
+
 .flex-container-2 {
     display: flex;
     flex-direction: row;
