fixed the footer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,3 +36,19 @@ img {
     justify-content: center;
     align-items: center;
 }
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.footer ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
