Added function to reduce health, but something is missing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,13 @@ img {
     align-items: center;
     margin:12px;
 }
+.healthText
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:12px;
+}
 
 .centerImage
 {
